// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductSpecifications /> component should match snapshot with table view and no specifications 1`] = `<DocumentFragment />`;

exports[`<ProductSpecifications /> component should match snapshot with table view and with specification 1`] = `
<DocumentFragment>
  <div
    class="specificationsTableContainer mt9 mt0-l pl8-l"
  >
    <h2
      class="specificationsTitle t-heading-5 mb5 mt0"
    >
      <div
        style="display: contents;"
      >
        Technical Specifications
      </div>
    </h2>
    <div
      class="container relative"
      style="transition: 600ms ease-in-out; height: auto; overflow: hidden; display: block;"
    >
      <div
        class="content h-auto"
      >
        <table
          class="specificationsTable w-100 bg-base border-collapse"
        >
          <thead
            class="specificationsTableHead"
          >
            <tr
              class="specificationsTableRow"
            >
              <th
                class="specificationsTablePropertyHeading w-50 b--muted-4 bb bt c-muted-2 t-body tl pa5"
              >
                Property
              </th>
              <th
                class="specificationsTableSpecificationHeading w-50 b--muted-4 bb bt c-muted-2 t-body tl pa5"
              >
                Specification
              </th>
            </tr>
          </thead>
          <tbody
            class="specificationsTableBody"
          >
            <tr
              class="specificationsTableRow"
            >
              <td
                class="specificationItemProperty w-50 b--muted-4 bb pa5"
                data-specification="test"
              >
                <div
                  style="display: contents;"
                >
                  test
                </div>
              </td>
              <td
                class="specificationItemSpecifications w-50 b--muted-4 bb pa5"
                data-specification="value"
              >
                <div
                  style="display: contents;"
                >
                  value
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="pointerEventsNone dn absolute bottom-0 w-100 h-100 flex-column justify-end"
      >
        <div
          class="fadeBottom w-100 h-50"
          style="transition: 400ms ease-in-out;"
        />
        <div
          class="pointerEventsAuto bg-base tc w-100"
        >
          <button
            class="showMoreButton c-action-primary t-action pointer ma5 bn outline-0"
          >
            Show more
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProductSpecifications /> component should match snapshot with tabs view 1`] = `
<DocumentFragment>
  <div
    class="specificationsTabsContainer pt8"
  >
    <h2
      class="specificationsTitle t-heading-5 mb5 mt0"
    >
      <div
        style="display: contents;"
      >
        Technical Specifications
      </div>
    </h2>
    <div
      class="tabs-mock"
    >
       
      <div
        class="tab-mock"
      >
         
        <div
          class="specificationsTab pb8 c-muted-1 pv6"
        >
          <div
            class="container relative"
            style="transition: 600ms ease-in-out; height: auto; overflow: hidden; display: block;"
          >
            <div
              class="content h-auto"
            >
              <div
                style="display: contents;"
              >
                value
              </div>
            </div>
            <div
              class="pointerEventsNone dn absolute bottom-0 w-100 h-100 flex-column justify-end"
            >
              <div
                class="fadeBottom w-100 h-50"
                style="transition: 400ms ease-in-out;"
              />
              <div
                class="pointerEventsAuto bg-base tc w-100"
              >
                <button
                  class="showMoreButton c-action-primary t-action pointer ma5 bn outline-0"
                >
                  Show more
                </button>
              </div>
            </div>
          </div>
        </div>
         
      </div>
       
    </div>
  </div>
</DocumentFragment>
`;
